--- a/public/client/css/style.css
+++ b/public/client/css/style.css
@@ -95,6 +95,10 @@
 .owl-theme .owl-dots .owl-dot span {
     background: #ffffff !important;
 }
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+  filter: invert(0) sepia(100%) saturate(0%) hue-rotate(0deg) brightness(0) contrast(100%);
+}
 .animation{
     -webkit-animation:spin 4s linear infinite;
     -moz-animation:spin 4s linear infinite;
